# bfsi-sales-agent

./: .env.example  README.md  main.py  pyproject.toml  requirements.txt  setup.py  setup_directories.py  test_agent.py
config/: agent_config.yaml  voice_config.yaml
config/use_cases/: mutual_funds.yaml
data/documents/: mutual_funds_faq.json
data/indices/: knowledge_index.pkl
src/: __init__.py
src/agent/: __init__.py  sales_agent.py
src/knowledge/: __init__.py  knowledge_base.py
src/tools/: __init__.py  tool_manager.py
src/utils/: __init__.py  config.py
src/voice/: __init__.py  call_handler.py  elevenlabs_tts.py
tests/: comprehensive_test.txt  example_script.txt
